<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <com.google.android.material.appbar.MaterialToolbar
        app:title="@string/msg_pixelly"
        app:titleTextColor="@color/white"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>
    <TextView
        android:id="@+id/download_status_text"
        android:textStyle="italic"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/download_button"
        android:text="@string/msg_tap_to_download"
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/download_style_switch"
        android:text="@string/download_w_intentservice"
        android:layout_margin="12dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/job_scheduler_style_switch"
        android:text="@string/download_w_jobscheduler"
        android:layout_margin="12dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ProgressBar
        android:id="@+id/download_progress_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/random_number_title_view"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_margin="12dp"
        android:text="@string/msg_random_number_generator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/general_random_button"
        android:text="@string/title_generate"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/general_job_result_button"
        android:text="@string/title_check_scheduled_job_result"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/scheduled_job_result_view"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>